--- a/2nd_index.html
+++ b/2nd_index.html
@@ -7,6 +7,8 @@
     <title>MY second GitHub Repo</title>
 </head>
 <body>
-    
+    <h1>I am learning git.</h1>
+    <h2>i can push code in git.</h2>
+    <h3>learning code is fun.</h3>
 </body>
 </html>
