--- a/2nd_index.html
+++ b/2nd_index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY second GitHub Repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>I am learning git.</h1>
     <h2>i can push code in git.</h2>
     <h3>learning code is fun.</h3>
+    <p>I am coding coding and coding.</p>
+    <p>Coding takes a lot of patience.</p>
 </body>
 </html>
