--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <h3>learning code is fun.</h3>
     <p>I am coding coding and coding.</p>
     <p>Coding takes a lot of patience.</p>
+    <img src="butterfly.jpg" alt="butterfly">
+    <img src="rainbow.JPG" alt="abstract rainbow">
 </body>
 </html>
