--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <p>I am coding coding and coding.</p>
     <p>Coding takes a lot of patience.</p>
     <img src="butterfly.jpg" alt="butterfly">
-    <img src="rainbow.JPG" alt="abstract rainbow">
+    <img src="rainbow.jpg" alt="abstract rainbow">
 </body>
 </html>
